opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/posixat"
bug-reports: "https://github.com/janestreet/posixat/issues"
dev-repo: "git+https://github.com/janestreet/posixat.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/posixat/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_optcomp"
  "ppx_sexp_conv"
  "dune"          {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Bindings to the posix *at functions"
description: "
Posixat is a small library that just binds the various *at posix
functions.

The posix *at functions takes the current working directory as a file
descriptor. For instance this allows to reliably maintain several
working directories inside the same process.
"
